force-app/main/default/objects/Building_Directory__c/Building_Directory__c.object-meta.xml
<CustomObject>
    <label>Directory Photo</label>
    <nameField>
        <displayFormat>BD-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Directory Photos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>