force-app/main/default/objects/Building_Directory__c/fields/Building__c.field-meta.xml
<CustomField>
    <fullName>Building__c</fullName>
    <label>Building</label>
    <referenceTo>Building__c</referenceTo>
    <relationshipName>Building_Directories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>