force-app/main/default/objects/Building_Directory__c/fields/Building_Directory_Image_s__c.field-meta.xml
<CustomField>
    <fullName>Building_Directory_Image_s__c</fullName>
    <label>Building Directory Image(s)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>