force-app/main/default/objects/Building_Directory__c/fields/Date_Walked__c.field-meta.xml
<CustomField>
    <fullName>Date_Walked__c</fullName>
    <label>Date Walked</label>
    <type>Date</type>
</CustomField>