force-app/main/default/objects/Building_Directory__c/fields/Directory_Status__c.field-meta.xml
<CustomField>
    <fullName>Directory_Status__c</fullName>
    <label>Directory Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fully Vacant</fullName>
            </value>
            <value>
                <fullName>Future Building</fullName>
            </value>
            <value>
                <fullName>No Directory</fullName>
            </value>
            <value>
                <fullName>Secured Building</fullName>
            </value>
            <value>
                <fullName>Under Construction</fullName>
            </value>
            <value>
                <fullName>Walked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>