force-app/main/default/objects/Building_Directory__c/fields/File_Location__c.field-meta.xml
<CustomField>
    <fullName>File_Location__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/Building__c/&quot; &amp;  Id &amp; &quot;/related/AttachedContentDocuments/view&quot;, &quot;Files&quot;)</formula>
    <label>File Location</label>
    <type>Text</type>
</CustomField>