force-app/main/default/objects/Building_Directory__c/fields/Walked_Status__c.field-meta.xml
<CustomField>
    <fullName>Walked_Status__c</fullName>
    <formula>IF(ISPICKVAL(Directory_Status__c, &quot;Walked&quot;), TEXT( Date_Walked__c ) , TEXT(Directory_Status__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Walked Status</label>
    <type>Text</type>
</CustomField>